2005-08-29  Paul D. Smith  <psmith@gnu.org>

	* scripts/functions/abspath: Add some text to the error messages
	to get a better idea of what's wrong.  Make warnings instead of
	errors.

	* scripts/features/patspecific_vars: Don't use "test", which is
	UNIX specific.  Print the values and let the test script match
	them.

2005-08-25  Paul Smith  <psmith@gnu.org>

	* scripts/variables/SHELL: Use a /./ prefix instead of //: the
	former works better with non-UNIX environments.  Fixes Savannah
	bug #14129.

2005-08-13  Boris Kolpackov  <boris@kolpackov.net>

	* scripts/functions/wildcard: Wrap calls to $(wildcard ) with
	$(sort) so that the resulting order is no longer filesystem-
	dependant.

2005-08-10  Boris Kolpackov  <boris@kolpackov.net>

	* scripts/features/statipattrules: Add a test for Savannah bug #13881.

2005-08-07  Paul D. Smith  <psmith@gnu.org>

	* scripts/features/parallelism: Add a test for a bug reported by
	Michael Matz (matz@suse.de) in which make exits without waiting
	for all its children in some situations during parallel builds.

2005-07-08  Paul D. Smith  <psmith@gnu.org>

	* test_driver.pl: Reset the environment to a clean value every
	time before we invoke make.  I'm suspicious that the environment
	isn't handled the same way in Windows as it is in UNIX, and some
	variables are leaking out beyond the tests they are intended for.
	Create an %extraENV hash tests can set to add more env. vars.
	* tests/scripts/features/export: Change to use %extraENV.
	* tests/scripts/functions/eval: Ditto.
	* tests/scripts/functions/origin: Ditto.
	* tests/scripts/options/dash-e: Ditto.
	* tests/scripts/variables/SHELL: Ditto.

2005-06-27  Paul D. Smith  <psmith@gnu.org>

	* scripts/options/dash-W: Use 'echo >>' instead of touch to update
	files.
	* scripts/features/reinvoke: Rewrite to be safer on systems with
	subsecond timestamps.
	* scripts/features/patternrules: False exits with different error